[project]
name = "katano"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "r-pechi", email = "eraiza0816@example.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "katano:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/katano"]
